--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
     />
     <meta name="description" content="Zydus Poster" />
     <meta property="og:title" content="Zydus Poster" />
-    <meta property="og:url" content="" />
+    <meta property="og:url" content="https://zyduscustomizedposter.in" />
     <meta property="og:description" content="Zydus Poster" />
-    <meta property="og:image" content="" />
+    <meta
+      property="og:image"
+      content="https://zyduscustomizedposter.in/favicon-32x32.png"
+    />
     <meta property="og:type" content="article" />
     <title>Zydus Poster | Zydus</title>
   </head>
